--- a/src/main/resources/templates/commons/modal.html
+++ b/src/main/resources/templates/commons/modal.html
@@ -20,6 +20,44 @@
         </div>
     </div>
 </div>
+<div th:fragment="updateModal" th:remove="tag">
+    <div id="updateModal" tabindex="-1" aria-labelledby="updateModal" aria-hidden="true" class="modal fade">
+        <div class="modal-dialog modal-lg">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="updateModalLabel">タスク編集</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <div class="mb-3">
+                        <input type="checkbox" id="statusCheckbox" class="form-check-input">
+                        <label for="status" class="form-label">ステータス</label>
+                        <select class="form-select" id="status">
+                            <option value="" selected>選択してください</option>
+                            <option value="TODO">TODO</option>
+                            <option value="DOING">DOING</option>
+                            <option value="DONE">DONE</option>
+                        </select>
+                    </div>
+                    <div class="mb-3">
+                        <input type="checkbox" id="priorityCheckbox" class="form-check-input" >
+                        <label for="priority" class="form-label">優先度</label>
+                        <select class="form-select" id="priority" >
+                            <option value="" selected>選択してください</option>
+                            <option value="HIGH">高</option>
+                            <option value="MEDIUM">中</option>
+                            <option value="LOW">低</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">キャンセル</button>
+                    <button type="submit" class="btn btn-primary" id="updateButton"  >実行</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
