--- a/src/main/resources/templates/tasks/list.html
+++ b/src/main/resources/templates/tasks/list.html
@@ -107,7 +107,8 @@
             </tr>
             </tbody>
         </table>
-        <div th:replace="/commons/modal :: deleteModal"></div>
+        <div th:replace="~{/commons/modal :: deleteModal}"></div>
+        <div th:replace="~{/commons/modal :: updateModal}"></div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
