--- a/src/main/resources/templates/tasks/detail.html
+++ b/src/main/resources/templates/tasks/detail.html
@@ -35,6 +35,7 @@
     <div th:object="${task}" class="mt-3">
         <!-- タスク情報: ID、概要、ステータス、優先度、説明を表示 -->
         <h2 th:text="'#' + *{id} + ' ' + *{summary}"></h2>
+        <h3 th:text="*{operatorName} == null ? '担当者： ' : '担当者： ' + *{operatorName}"></h3>
         <p th:text="*{status}"></p>
         <p th:switch="*{priority}">優先度：
             <span th:case="'HIGH'" class="badge bg-danger">高</span>
