--- a/src/main/resources/templates/tasks/form.html
+++ b/src/main/resources/templates/tasks/form.html
@@ -56,6 +56,15 @@
                 </select>
                 <span th:errors="*{priority}" class="invalid-feedback"></span>
             </div>
+            <div id="pullDown" class="form-group mt-3" th:style="*{status == 'DONE'} ? 'display: none;' : ''">
+                <!-- 担当者検索フィールド -->
+                <label class="form-label" for="operatorId">担当者</label>
+                <select class="form-select" id="operatorId" th:field="*{operatorId}">
+                    <option value="0" selected>選択してください</option>
+                    <!-- 担当者のリストをループして表示 -->
+                    <option th:each="operatorUser : ${operatorUserList}" th:value="${operatorUser.id}" th:text="${operatorUser.name}"></option>
+                </select>
+            </div>
             <!-- ボタン: 作成/編集と戻る -->
             <div class="mt-3">
                 <button type="submit" class="btn btn-primary" th:text="${mode == 'CREATE'} ? '作成' : '編集'"></button>
@@ -63,6 +72,9 @@
             </div>
         </form>
     </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="/js/tasks/form.js"></script>
 </section>
 </body>
 </html>
