--- a/src/main/resources/templates/tasks/list.html
+++ b/src/main/resources/templates/tasks/list.html
@@ -59,6 +59,15 @@
                         <label class="btn btn-outline-primary" for="priorityLow">低</label>
                     </div>
                 </div>
+                <div class="form-group mt-3">
+                    <!-- 担当者検索フィールド -->
+                    <label class="form-label" for="operatorId">担当者</label>
+                    <select class="form-select" id="operatorId" th:field="*{operatorId}">
+                        <option value="0" selected>選択してください</option>
+                        <!-- 担当者のリストをループして表示 -->
+                        <option th:each="operatorUser : ${operatorUserList}" th:value="${operatorUser.id}" th:text="${operatorUser.name}"></option>
+                    </select>
+                </div>
                 <div class="mt-3">
                     <!-- 検索ボタン -->
                     <button type="submit" class="btn btn-primary">検索</button>
@@ -83,6 +92,7 @@
                 <th>概要</th>
                 <th>ステータス</th>
                 <th>優先度</th>
+                <th>担当者</th>
             </tr>
             </thead>
             <tbody id="result-table-body">
@@ -104,6 +114,8 @@
                     <span th:case="'MEDIUM'" class="badge bg-warning">中</span>
                     <span th:case="'LOW'" class="badge bg-secondary">低</span>
                 </td>
+                <!-- 担当者名 -->
+                <td th:text="*{operatorName}"></td>
             </tr>
             </tbody>
         </table>
